Homework Data Streams correct