@@ -1,9 +1,15 @@
 package ru.hogwarts.school.service;
 
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.UrlResource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import ru.hogwarts.school.exception.AvatarByStudentIdNotFoundException;
 import ru.hogwarts.school.exception.FileNotFoundException;
 import ru.hogwarts.school.exception.StudentNotFoundException;
 import ru.hogwarts.school.model.Avatar;
@@ -16,6 +22,8 @@ import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+
+import static java.nio.file.StandardOpenOption.CREATE_NEW;
 
 @Service
 public class AvatarService {
@@ -31,12 +39,19 @@ public class AvatarService {
     private String avatarsDir;
 
     public void uploadAvatar(Long studentId, MultipartFile avatarFile) throws IOException {
-        Student student = studentRepository.findById(studentId).
-                orElseThrow(() -> new StudentNotFoundException(studentId));
-
-        Path filePath = saveFileToDisk(avatarFile);
-
-        Avatar avatar = new Avatar();
+        Student student = studentRepository.getById(studentId);
+        Path filePath = Path.of(avatarsDir, student + "." + getExtensions(avatarFile.getOriginalFilename()));
+        Files.createDirectories(filePath.getParent());
+        Files.deleteIfExists(filePath);
+        try (
+                InputStream is = avatarFile.getInputStream();
+                OutputStream os = Files.newOutputStream(filePath, CREATE_NEW);
+                BufferedInputStream bis = new BufferedInputStream(is, 1024);
+                BufferedOutputStream bos = new BufferedOutputStream(os, 1024);
+        ) {
+            bis.transferTo(bos);
+        }
+        Avatar avatar = findAvatar(studentId);
         avatar.setStudent(student);
         avatar.setFilePath(filePath.toString());
         avatar.setFileSize(avatarFile.getSize());
@@ -45,33 +60,53 @@ public class AvatarService {
         avatarRepository.save(avatar);
     }
 
-
-
-    private Path saveFileToDisk(MultipartFile file) throws IOException {
-        Path directoryPath = Paths.get(avatarsDir);
-        Files.createDirectories(directoryPath); // Создаем папку, если её нет
-
-        Path filePath = directoryPath.resolve(file.getOriginalFilename());
-
-        Files.write(filePath, file.getBytes());
-
-        return filePath;
+    private String getExtensions(String fileName) {
+        return fileName.substring(fileName.lastIndexOf(".") + 1);
     }
 
-    public byte[] getAvatarDataFromDb(Long studentId) {
-        Avatar avatar = avatarRepository.findByStudentId(studentId);
+    public Avatar findAvatar(Long id) {
+        return avatarRepository.findById(id)
+                .orElseThrow(() -> new AvatarByStudentIdNotFoundException(id));
+    }
+
+    public byte[] getAvatarDataFromDb(Long id) {
+        Avatar avatar = findAvatar(id);
         return avatar.getData();
     }
 
-    public UrlResource getAvatarFromFile(Long studentId) throws MalformedURLException, ru.hogwarts.school.exception.FileNotFoundException {
-        Avatar avatar = avatarRepository.findByStudentId(studentId);
-        Path filePath = Paths.get(avatar.getFilePath());
-        UrlResource resource = new UrlResource(filePath.toUri());
+    public InputStream getAvatarDataFromFile(Long id) throws IOException {
+        Avatar avatar = findAvatar(id);
+        Path path = Path.of(avatar.getFilePath());
+        return Files.newInputStream(path);
+    }
 
-        if (resource.exists() && resource.isReadable()) {
-            return resource;
-        } else {
-            throw new FileNotFoundException("Не найден аватар файл по student ID: " + studentId);
+    public String getAvatarMediaType(Long id) {
+        Avatar avatar = findAvatar(id);
+        return avatar.getMediaType();
+    }
+
+    public long getAvatarFileSize(Long id) {
+        Avatar avatar = findAvatar(id);
+        return avatar.getFileSize();
+    }
+
+    public ResponseEntity<byte[]> prepareAvatarResponseFromDb(Long id) {
+        byte[] avatarData = getAvatarDataFromDb(id);
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.parseMediaType(getAvatarMediaType(id)));
+        headers.setContentLength(avatarData.length);
+        return ResponseEntity.status(HttpStatus.OK).headers(headers).body(avatarData);
+    }
+
+    public void prepareAvatarResponseFromFile(Long id, HttpServletResponse response) throws IOException {
+        try (InputStream is = getAvatarDataFromFile(id);
+             OutputStream os = response.getOutputStream()) {
+
+            response.setStatus(HttpStatus.OK.value());
+            response.setContentType(getAvatarMediaType(id));
+            response.setContentLength((int) getAvatarFileSize(id));
+
+            is.transferTo(os);
         }
     }
 }
